fix main menu align, fix tooltip align, move tooltip sript to base

--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -37,10 +37,10 @@
     flex-direction: column;
     position:absolute;
     right: 5vw;
-    top: 4vh;
+    top: 5vh;
     padding: 1vw;
     background-color: white;
-    border: 1px solid red;
+    border-radius: 5px;
 }
 
 #user-profile-tooltip p {
